--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,6 +7,7 @@ python-jose[cryptography]==3.3.0
 passlib[bcrypt]==1.7.4
 python-dotenv==1.0.0
 requests==2.31.0
+httpx==0.25.2
 Pillow==10.1.0
 # OLM OCR Libraries - Compatible with Python 3.9
 transformers==4.35.2
@@ -21,3 +22,6 @@ sentencepiece==0.1.99
 protobuf==3.20.3
 # Force specific versions to avoid conflicts
 typing-extensions==4.8.0 
+pytesseract
+pillow
+sendgrid==6.10.0 
